# ks-web-app

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  RELEASE-NOTES.md  docker-compose.yml  pyproject.toml
.evidence/: step500-slice520-frontend-gates.txt  step500-slice540-frontend-gates.txt  step500-slice550-frontend-gates.txt
.github/workflows/: ci.yml  release-ci.yml  (+1 more)
backend/: README.md  kriegspiel_wrapper.py  main.py  models.py  pyproject.toml  test_database.py  test_main.py
backend/scripts/: test-step-120.sh
backend/src/app/: Dockerfile  config.py  db.py  dependencies.py  logging_config.py  main.py  requirements-dev.txt  requirements.txt
backend/src/app/models/: __init__.py  auth.py  game.py  user.py
backend/src/app/routers/: __init__.py  auth.py  game.py  user.py
backend/src/app/services/: __init__.py  clock_service.py  code_generator.py  engine_adapter.py  game_service.py  session_service.py  state_projection.py  user_service.py
backend/src/mongo/: init-replica.sh
backend/src/nginx/: Dockerfile  nginx.conf
backend/src/nginx/conf.d/: kriegspiel-dev.conf  kriegspiel.conf
backend/src/nginx/tests/: slice720_smoke.sh
backend/src/tests/: conftest.py  test_app_factory.py  test_auth.py  test_auth_router.py  test_auth_routes.py  test_clock_service.py  test_code_generator.py  test_config.py  test_db.py  test_dependencies.py  test_engine_adapter.py  test_game_history_routes.py  test_game_lifecycle.py  test_game_models.py  test_game_router.py  test_game_routes_move.py  test_game_service.py  test_game_state_polling.py  test_game_timeouts.py  test_gameplay_integration.py  test_health.py  test_logging.py  test_password.py  test_player_features.py  test_session_service.py  test_telemetry_contracts.py  test_user_models.py  test_user_routes.py  test_user_service.py
backend/src/tests/security/: test_auth_session_security.py  test_authorization_and_abuse.py  test_logging_redaction_security.py
frontend/: Dockerfile  contentRoot.config.js  index.html  package-lock.json  package.json  server.mjs  vite.config.js  vitest.config.js  vitest.setup.js
scripts/: README.md  backup.sh  health-check.sh  restore.sh  test-step-740.sh  test-step-810.sh  test-step-820.sh  test-step-830.sh  test-step-840.sh  test-step-850.sh
(+150 files in other folders)
