[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "uvicorn>=0.32.1",
    "ruff>=0.12.1",
    "python-chess>=1.999",
    "mypy>=1.16.1",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.mypy]
ignore_missing_imports = true