[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "uvicorn>=0.32.1",
    "ruff>=0.12.1",
    "python-chess>=1.999",
    "mypy>=1.16.1",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "peewee>=3.18.1",
    "kriegspiel",
    "bcrypt>=4.3.0",
    "pydantic-settings>=2.3.4",
    "motor>=3.6.0",
    "pymongo>=4.8.0",
]

[tool.mypy]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.1",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires disposable MongoDB",
]

[tool.black]
line-length = 128
target-version = ["py312"]
include = "src/(app|tests)/.*\\.pyi?$"

[tool.ruff]
line-length = 128
src = ["src/app", "src/tests"]

[tool.ruff.lint]
select = ["E", "F"]

[tool.coverage.run]
source = ["app"]
branch = true
